--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-jwt": "^5.3.1",
     "hammerjs": "^2.0.8",
     "jwks-rsa": "^1.6.0",
+    "jwt-decode": "^2.2.0",
     "method-override": "^3.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
